add more questions on my js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <header>
-      <h1>MATH JEOPARDY</h1>
+      <h1>MATH to JEOPARDY</h1>
     </header>
 
     <main>
@@ -82,8 +82,8 @@
                 <p>Answer: 10</p>
               </li>
               <li>
-                <p>Question: What is 9 multiplied by 7?</p>
-                <p>Answer: 63</p>
+                <p>Question: What is 8 multiplied by 7?</p>
+                <p>Answer: 56</p>
               </li>
               <li>
                 <p>Question: Calculate 84 divided by 12.</p>
