add structure for arithemetic apper right

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
         <p id="play-link" class="clickable">Click here to play Math Jeopardy</p>
         <h2><a href="#game-container">Let's Start the Game</a></h2>
       </section>
-
-      <div id="game-container" style="display: none">
-
+<section id="game-container" style="display: none;">
             <h2>Arithmetic Questions</h2>
             <ul>
               <li>
@@ -131,7 +129,7 @@
             </ul>
           </div>
         </div>
-      
+</section>
 
       <div id="score-container">
         <div id="score"></div>
