--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
           <li>Answer within the given time limit.</li>
           <li>Correct answers earn you points.</li>
           <li>The player with the most points wins!</li>
+          <li>To begin enjoying the game, you must click: Click here for the first time to play Math Jeopardy, and then click again to
+        bring up the game.</li>
         </ol>
         <p id="benefits-heading">Playing Math Jeopardy is a fun way to:</p>
         <ul id="benefits-list">
@@ -127,8 +129,7 @@
                 <p>Answer: 21</p>
               </li>
             </ul>
-          </div>
-        </div>
+          
 </section>
 
       <div id="score-container">
