add endgame function

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
           <li>Challenge yourself and others</li>
           <li>Learn while having a great time</li>
         </ul>
-        <p id="play-link" class="clickable">Click here to play Math Jeopardy</p>
-        <h2><a href="#game-container">Let's Start the Game</a></h2>
+        <buttom id="play-link"> Start Game</buttom>
       </section>
 <section id="game-container" style="display: none;">
             <h2>Arithmetic Questions</h2>
