add change on button instead of butom

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
           sequence of arithmetic-based inquiries.
         </p>
       
-<p id="how-to-play-heading" class="clickable">How to Play:</p> 
+<p id="how-to-play-heading" class="clickable">How to Play:</p>
+
 <ol id="instructions-list" style="display: none;">
           <li>Players take turns answering mathematical questions.</li>
           <li>Answer within the given time limit.</li>
@@ -42,7 +43,7 @@
           <li>Challenge yourself and others</li>
           <li>Learn while having a great time</li>
         </ul>
-        <buttom id="play-link"> Start Game</buttom>
+        <button id="play-link"> Start Game</button>
       </section>
 <section id="game-container" style="display: none;">
             <h2>Arithmetic Questions</h2>
