--- a/index.html
+++ b/index.html
@@ -33,121 +33,123 @@
                 <li>Correct answers earn you points.</li>
                 <li>The player with the most points wins!</li>
                 <li>To begin enjoying the game, you must click: Click here for the first time to play Math Jeopardy, and
-                    then click again to bring up the game.</li>
+                    then click again to
+                    bring up the game.</li>
             </ol>
-
             <p id="benefits-heading">Playing Math Jeopardy is a fun way to:</p>
             <ul id="benefits-list">
                 <li>Improve your math skills</li>
                 <li>Challenge yourself and others</li>
                 <li>Learn while having a great time</li>
             </ul>
-            <button id="play-link">Start Game</button>
+            <button id="play-link"> Start Game</button>
         </section>
-
         <section id="game-container" style="display: none;">
             <h2>Arithmetic Questions</h2>
             <ul>
-<li>
-    <p>Question: What is 9 multiplied by 7?</p>
-    <p>Answer: 63</p>
-</li>
-<li>
-    <p>Question: Calculate 12 divided by 4.</p>
-    <p>Answer: 3</p>
-</li>
-<li>
-    <p>Question: What is 12 plus 13?</p>
-    <p>Answer: 25</p>
-</li>
-<li>
-    <p>Question: Subtract 23 from 30.</p>
-    <p>Answer: 7</p>
-</li>
-<li>
-    <p>Question: What is 5 multiplied by 7?</p>
-    <p>Answer: 35</p>
-</li>
-<li>
-    <p>Question: Calculate 60 divided by 10.</p>
-    <p>Answer: 6</p>
-</li>
-<li>
-    <p>Question: What is 17 plus 13?</p>
-    <p>Answer: 30</p>
-</li>
-<li>
-    <p>Question: Subtract 40 from 50.</p>
-    <p>Answer: 10</p>
-</li>
-<li>
-    <p>Question: What is 8 multiplied by 7?</p>
-    <p>Answer: 56</p>
-</li>
-<li>
-    <p>Question: Calculate 84 divided by 12.</p>
-    <p>Answer: 7</p>
-</li>
-<li>
-    <p>Question: What is 13 plus 34?</p>
-    <p>Answer: 47</p>
-</li>
-<li>
-    <p>Question: Subtract 42 from 65.</p>
-    <p>Answer: 23</p>
-</li>
-<li>
-    <p>Question: What is 9 multiplied by 7?</p>
-    <p>Answer: 63</p>
-</li>
-<li>
-    <p>Question: Calculate 12 divided by 4.</p>
-    <p>Answer: 3</p>
-</li>
-<li>
-    <p>Question: What is 15 plus 18?</p>
-    <p>Answer: 33</p>
-</li>
-<li>
-    <p>Question: Subtract 42 from 60.</p>
-    <p>Answer: 18</p>
-</li>
-<li>
-    <p>Question: What is 12 multiplied by 5?</p>
-    <p>Answer: 60</p>
-</li>
-<li>
-    <p>Question: Calculate 81 divided by 9.</p>
-    <p>Answer: 9</p>
-</li>
-<li>
-    <p>Question: What is 1 plus 4?</p>
-    <p>Answer: 5</p>
-</li>
-<li>
-    <p>Question: Subtract 12 from 33.</p>
-    <p>Answer: 21</p>
-</li>
+                <li>
+                    <p>Question: What is 9 multiplied by 7?</p>
+                    <p>Answer: 63</p>
+                </li>
+                <li>
+                    <p>Question: Calculate 12 divided by 4.</p>
+                    <p>Answer: 3</p>
+                </li>
+                <li>
+                    <p>Question: What is 12 plus 13?</p>
+                    <p>Answer: 25</p>
+                </li>
+                <li>
+                    <p>Question: Subtract 23 from 30.</p>
+                    <p>Answer: 7</p>
+                </li>
+                <li>
+                    <p>Question: What is 5 multiplied by 7?</p>
+                    <p>Answer: 35</p>
+                </li>
+                <li>
+                    <p>Question: Calculate 60 divided by 10.</p>
+                    <p>Answer: 6</p>
+                </li>
+                <li>
+                    <p>Question: What is 17 plus 13?</p>
+                    <p>Answer: 30</p>
+                </li>
+                <li>
+                    <p>Question: Subtract 40 from 50.</p>
+                    <p>Answer: 10</p>
+                </li>
+                <li>
+                    <p>Question: What is 8 multiplied by 7?</p>
+                    <p>Answer: 56</p>
+                </li>
+                <li>
+                    <p>Question: Calculate 84 divided by 12.</p>
+                    <p>Answer: 7</p>
+                </li>
+                <li>
+                    <p>Question: What is 13 plus 34?</p>
+                    <p>Answer: 47</p>
+                </li>
+                <li>
+                    <p>Question: Subtract 42 from 65.</p>
+                    <p>Answer: 23</p>
+                </li>
+                <li>
+                    <p>Question: What is 9 multiplied by 7?</p>
+                    <p>Answer: 63</p>
+                </li>
+                <li>
+                    <p>Question: Calculate 12 divided by 4.</p>
+                    <p>Answer: 3</p>
+                </li>
+                <li>
+                    <p>Question: What is 15 plus 18?</p>
+                    <p>Answer: 33</p>
+                </li>
+                <li>
+                    <p>Question: Subtract 42 from 60.</p>
+                    <p>Answer: 18</p>
+                </li>
+                <li>
+                    <p>Question: What is 12 multiplied by 5?</p>
+                    <p>Answer: 60</p>
+                </li>
+                <li>
+                    <p>Question: Calculate 81 divided by 9.</p>
+                    <p>Answer: 9</p>
+                </li>
+                <li>
+                    <p>Question: What is 1 plus 4?</p>
+                    <p>Answer: 5</p>
+                </li>
+                <li>
+                    <p>Question: Subtract 12 from 33.</p>
+                    <p>Answer: 21</p>
+                </li>
             </ul>
+
         </section>
 
         <div id="score-container">
             <div id="score"></div>
         </div>
-<div id="winner-container">
-    <p class="winner-message"></p>
-    <button id="restart-button">Restart Game</button>
-    <div id="winning-screen"> </div>
-    <div id="winner-actions-container">
-        <p class="winner-message"></p>
-        <button id="start-new-game-button">Start New Game</button>
-        <button id="cancel-game-button">Cancel Game</button>
-    </div>
-</div>
+
+        <div id="winner-container">
+            <p id="winner-message"></p>
+            <button id="restart-button">Restart Game</button>
+            <div id="winning-screen"> </div>
+            <div id="winner-container">
+                <p> id= winner-message</p>
+                <button id="start-new-game-button">Start New Game</button>
+                <button id="cancel-game-button">Cancel Game</button>
+            </div>
+        </div>
 
         <h1>Congratulations on Your Victory!</h1>
+        </div>
+        </div>
     </main>
 </body>
 
 </html>
-
